--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -787,7 +787,15 @@ We obtain:
 	\left(\dfrac{\beta_7}{\beta_6}\right)^\varnothing = \dfrac{\nu_7+k_7\Theta_0}{\kappa \nu_7+\sigma k_7 \Theta_0} 
 	= r^\varnothing = \dfrac{1+10^{-3} \deltaLi^\varnothing}{1+10^{-3}\deltaLiOut}
 \end{equation}
-
+We redefine the catalytic ratio:
+\begin{equation}
+	\phi = \dfrac{\nu_7}{k_7\Theta_0}
+\end{equation}
+leading to:
+\begin{equation}
+	\left(\dfrac{\beta_7}{\beta_6}\right)^\varnothing = \dfrac{1+\phi}{\sigma+\phi\kappa}
+\end{equation}
+Interestingly enough, the rise in potential due to the passive lithium intake will slow down the passive intake, and will therefore increase the isotopic separation.
 \subsubsection{Electroosmotic Only Intake}
 
 \section{Simulation}
